--- a/samples/imaterialist/inspect_attributes.ipynb
+++ b/samples/imaterialist/inspect_attributes.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,21 @@
      "output_type": "stream",
      "text": [
       "  0%|          | 0/1443 [00:00<?, ?it/s]/home/ubuntu/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/ipykernel/__main__.py:15: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  1%|          | 11/1443 [00:14<44:55,  1.88s/it] "
+      "100%|██████████| 1443/1443 [13:28<00:00,  2.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy = 0.300 hit 3465 miss 8075\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
