--- a/samples/imaterialist/inspect-inference-512.ipynb
+++ b/samples/imaterialist/inspect-inference-512.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6338e859da74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0max\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0moptimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mimgaug\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maugmenters\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0miaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ax'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import gc\n",
@@ -28,6 +40,8 @@
     "import imutils\n",
     "import itertools\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "from ax import optimize\n",
     "\n",
     "from imgaug import augmenters as iaa\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, RepeatedStratifiedKFold"
@@ -357,34 +371,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute VOC-style Average Precision\n",
     "random.seed(888)\n",
     "image_ids = np.random.choice(dataset.image_ids, 1000)\n",
-    "def compute_batch_ap(image_ids):\n",
-    "    APs = []\n",
-    "    for image_id in tqdm(image_ids):\n",
-    "        # Load image\n",
-    "        image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
-    "            modellib.load_image_gt(dataset, config,\n",
-    "                                   image_id, use_mini_mask=False)\n",
-    "        # Run object detection\n",
-    "        results = model.detect([image], verbose=0)\n",
-    "        # Compute AP\n",
-    "        r = results[0]\n",
-    "        AP, precisions, recalls, overlaps =\\\n",
-    "            utils.compute_ap(gt_bbox, gt_class_id, gt_mask,\n",
-    "                              r['rois'], r['class_ids'], r['scores'], r['masks'])\n",
-    "        APs.append(AP)\n",
-    "    return APs\n",
+    "\n",
+    "predictions=[]\n",
+    "groundtruths=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image_id in tqdm(image_ids):\n",
+    "    # Load image\n",
+    "    image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
+    "        modellib.load_image_gt(dataset, config,\n",
+    "                               image_id, use_mini_mask=False)\n",
+    "    # Run object detection\n",
+    "    results = model.detect([image], verbose=0)\n",
+    "    predictions.append(results[0])\n",
+    "    groundtruths.append({\"class_ids\":gt_class_id, \"masks\":gt_mask, \"rois\":gt_bbox})\n",
     "\n",
     "# Pick a set of random images\n",
     "#image_ids = np.random.choice(dataset.image_ids, 1000)\n",
     "#APs = compute_batch_ap(image_ids)\n",
     "#print(\"mAP @ IoU=50: \", np.mean(APs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_ap(iou_threshold, gt_bbox, gt_class_id, gt_mask, r):\n",
+    "    gt_match, pred_match, overlaps = utils.compute_matches(\n",
+    "        gt_bbox, gt_class_id, gt_mask,\n",
+    "        r['rois'], r['class_ids'], r['scores'], r['masks'],\n",
+    "        iou_threshold)\n",
+    "\n",
+    "    set_gt_class = set(list(gt_class_id))\n",
+    "\n",
+    "    set_pd_class = set(list(r['class_ids']))\n",
+    "    all_set = set_pd_class.union(set_pd_class)\n",
+    "    tp = {}\n",
+    "    fp = {}\n",
+    "    fn = {}\n",
+    "    ap = {}\n",
+    "\n",
+    "    for id in set_pd_class:\n",
+    "        fp[id]=np.sum(pred_match[r['class_ids']==id]>=0)\n",
+    "\n",
+    "    for id in set_gt_class:\n",
+    "        tp[id]=np.sum(gt_match[gt_class_id==id]>=0)\n",
+    "        fn[id]=np.sum(gt_match[gt_class_id==id]<0)\n",
+    "        if id not in fp:\n",
+    "            fp[id] = 0\n",
+    "        ap[id] = tp[id]/(tp[id]+fp[id]+fn[id])\n",
+    "\n",
+    "    mAP = np.mean([k for v,k in ap.items()])\n",
+    "\n",
+    "    return mAP\n",
+    "\n",
+    "def calculate_ap_range(gt_bbox, gt_class_id, gt_mask, r):\n",
+    "    iou_range = [0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]\n",
+    "    mAP_range = []\n",
+    "    for iou in iou_range:\n",
+    "        mAP = calculate_ap(iou, gt_bbox, gt_class_id, gt_mask, r)\n",
+    "        mAP_range.append(mAP/iou)\n",
+    "    average_mAP = np.mean(mAP_range)\n",
+    "    return average_mAP\n",
+    "\n",
+    "def filter_by_confidence(r, thresholds):\n",
+    "    '''\n",
+    "    class_ids include index 0 that is background\n",
+    "    thresholds do not have index as background\n",
+    "    \n",
+    "    '''\n",
+    "    array_size = len(r['scores'])\n",
+    "    for i in range(array_size-1,-1,-1):\n",
+    "        if r['scores'][i]<thresholds[r['class_ids'][i]-1]:\n",
+    "            r['scores'] = np.delete(r['scores'],i,0)\n",
+    "            r['class_ids'] = np.delete(r['class_ids'],i,0)\n",
+    "            r['rois'] = np.delete(r['rois'],i,0)\n",
+    "            r['masks'] = np.delete(r['masks'],i,2)\n",
+    "    return r\n",
+    "\n",
+    "def compute_batch_ap(d):\n",
+    "    det_thresholds = {cat_id:d[str(cat_id)] for i in range(46)}\n",
+    "    APs = []\n",
+    "    for result, gt in zip(predictions, groundtruth):\n",
+    "\n",
+    "        r = filter_by_confidence(result.copy(), det_thresholds)\n",
+    "        AP = calculate_ap_range(gt['rois'], gt['class_id'], gt['masks'], r)\n",
+    "        APs.append(AP)\n",
+    "    return np.mean(APs)\n",
+    "\n",
+    "best_parameters, best_values, experiment, model = optimize(\n",
+    "    parameters=[{\"name\": str(cat_id),\"type\": \"range\",\"bounds\": [0.7, 1.0]} \\\n",
+    "                for cat_id in range(46)],\n",
+    "    # Booth function\n",
+    "    evaluation_function=compute_batch_ap,\n",
+    "    minimize=False,\n",
+    ")\n",
+    "\n",
+    "print(best_parameters)"
    ]
   },
   {
